...
Object.defineProperty(exports, "__esModule", {
  value: true
});
var _exportNames = {
  setGenericPassword: true,
  getGenericPassword: true,
  hasGenericPassword: true,
  resetGenericPassword: true,
  getAllGenericPasswordServices: true,
  hasInternetCredentials: true,
  setInternetCredentials: true,
  getInternetCredentials: true,
  resetInternetCredentials: true,
...
